[project]
name = "inspection-framework"
version = "0.1.0"
description = "Starter webcam object detection backend using cam2ip, Flask, and YOLO11n."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "numpy",
    "opencv-python",
    "requests",
    "ultralytics",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["test_main.py"]
